erl_cowboy/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microserver-deployment
  labels:
    app: microserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microserver
  template:
    metadata:
      labels:
        app: microserver
    spec:
      containers:
      - name: erlc
        image: localhost:5000/microserver/erlang:0.0.1
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
            httpHeaders:
            - name: X-Health
              value: Awesome
          initialDelaySeconds: 15
          periodSeconds: 3
