erl_cowboy/deployment/erlc_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microserver-deployment
  labels:
    app: microserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microserver
  template:
    metadata:
      labels:
        app: microserver
    spec:
      containers:
      - name: erlang
        image: erlang:latest
        ports:
        - containerPort: 80
