erl_cowboy/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-microserver-service
spec:
  type: NodePort
  selector:
    app: default-microserver-service
  ports:
    - name: app
      protocol: TCP
      port: 80
